# RE-UE4SS

./: .gitignore  README.md  test_lua_c_vs_cpp.ps1  test_lua_raii.ps1  test_lua_raii.sh  xmake.lua
.github/workflows/: cmake-ci.yml  cmake-experimental.yml  cmake-release.yml  cmake_build_ue4ss.yml
UE4SS/: xmake.lua
UE4SS/include/: PatternSleuthBindings.hpp  SettingsManager.hpp
UE4SS/include/GUI/: GUI.hpp  HexViewer.hpp  ImGuiValueHelpers.hpp  LiveView.hpp
UE4SS/src/: PatternSleuthBindings.cpp  SettingsManager.cpp  UE4SSProgram.cpp
UE4SS/src/GUI/: Dumpers.cpp  GUI.cpp  HexViewer.cpp  LiveView.cpp
assets/: Changelog.md
docs/dev/: custom-game-configs.html  index.html  print.html  searchindex.js  searchindex.json
docs/dev/feature-overview/: universal-mods.html
docs/dev/lua-api/: examples.html
docs/guides/: generating-uht-compatible-headers.html  using-custom-lua-bindings.html
docs/lua-api/classes/: aactor.html  arrayproperty.html  boolproperty.html  fieldclass.html  fstring.html  property.html  structproperty.html  tarray.html  uobject.html  uscriptstruct.html
docs/lua-api/global-functions/: executeasync.html  executewithdelay.html  findfirstof.html  registercallfunctionbynamewithargumentsprehook.html  (+7 more)
docs/release/: 404.html  index.html  installation-guide.html  lua-api.html  print.html  searchindex.js  searchindex.json
src/: UE4SSProgram.cpp
src/LuaType/: LuaTArray.cpp
src/Mod/: LuaMod.cpp
src/SDKGenerator/: UEHeaderGenerator.cpp
src/USMapGenerator/: Generator.cpp
test/: CMakeLists.txt  xmake.lua
tools/buildscripts/: build.ps1
(+55 files in other folders)
